--- a/gw2t.css
+++ b/gw2t.css
@@ -4,7 +4,7 @@
 	Measurements: minimum window size is 360x720, which is only enough for the
 	clock and timers list (all of the right panel).
 	CSS3: uses gradient, text-shadow, box-shadow modules.
-	Version: 2014.04.30 modified - 2010.04.18 created
+	Version: 2014.05.15 modified - 2010.04.18 created
 
 	CREDITS:
 	Game assets and map tiles are copyright 2012 ArenaNet, Inc.
@@ -363,12 +363,16 @@ div#qTip {
 	bottom: 0px;
 	width: 360px; height: auto;
 	min-height: 312px;
-	overflow-y: auto;
 	top: 408px;
 	color: #eee;
 	text-shadow: 0px 0px 2px black;
 	background: #333;
 	background: linear-gradient(to right, #111 0%, #383838 50%, #111 100%);
+}
+
+#paneContent article {
+	width: 360px; height: 100%;
+	overflow-y: auto;
 }
 
 #layerChains {
