--- a/gw2t.css
+++ b/gw2t.css
@@ -4,13 +4,13 @@
 	Measurements: minimum window size is 360x720, which is only enough for the
 	clock and timers list (all of the right panel).
 	CSS3: uses gradient, text-shadow, box-shadow modules.
-	Version: 2014.05.16 modified - 2010.04.18 created
+	Version: 2014.05.17 modified - 2010.04.18 created
 
 	CREDITS:
 	Game assets and map tiles are copyright 2012 ArenaNet, Inc.
 	extracted using https://github.com/kytulendu/Gw2Browser
 	Gradient generated with colorzilla.com/gradient-editor
-	WintrySnowman - Design influenced by http://gw2stuff.com
+	Design influenced by http://gw2stuff.com by WintrySnowman
 
 	CONVENTIONS:
 	Classes and IDs are lower camel case: exampleClass
@@ -47,14 +47,6 @@ html, body {
 
 ::selection {
 	color: #576976;
-}
-
-#diaNoJSWarning {
-	position: absolute;
-	padding: 10px 0 0 10px;
-	font-size: 24px;
-	font-weight: bold;
-	color: red;
 }
 
 #jsConsole {
