--- a/gw2t.css
+++ b/gw2t.css
@@ -4,7 +4,7 @@
 	Measurements: minimum window size is 360x720, which is only enough for the
 	clock and timers list (all of the right panel).
 	CSS3: uses gradient, text-shadow, box-shadow modules.
-	Version: 2014.05.17 modified - 2010.04.18 created
+	Version: 2014.05.18 modified - 2010.04.18 created
 
 	CREDITS:
 	Game assets and map tiles are copyright 2012 ArenaNet, Inc.
@@ -18,14 +18,14 @@
 	The first word is its "type", and three-letter abbreviations are "namespaces"
 	Divisors of 360: 1, 2, 3, 4, 5, 6, 8, 9, 10, 12, 15, 18, 20, 24,
 	30, 36, 40, 45, 60, 72, 90, 120, 180.
-	four-values: top, right, bottom, left;
+	four-values order: top, right, bottom, left;
 
 	TABLE OF CONTENTS (Ctrl+F "AtsignAtsignLetter" to jump to section)
 
 	M - Map pane
-	C - Clock pane
+	K - Clock pane
 	B - Menu bar pane
-	T - Timer layer
+	C - Chains layer
 	O - Options layer
 	P - Color palette
 
@@ -41,6 +41,13 @@ body > windowMain
 	panelLeft[paneMap], panelRight[paneClock, paneMenu, paneContent]
 }
 ----------------------------------------------------------------------------- */
+@font-face {
+	font-family: "Menomonia";
+	src: url("https://d1h9a8s8eodvjz.cloudfront.net/fonts/menomonia/08-02-12/font/menomonia.woff") format("woff");
+	font-weight: normal;
+	font-style: normal;
+}
+
 html, body {
 	height: 100%;
 }
@@ -148,6 +155,14 @@ div#qTip {
 	bottom: 12px; right: 12px;
 	z-index: 9;
 }
+#itemMapButtons span { /* Website name */
+	vertical-align: middle;
+	font-family: Menomonia;
+	font-size: 18px;
+	color: #ffeebb;
+	opacity: 0.6;
+	cursor: default;
+}
 #mapCompassButton {
 	
 	vertical-align: middle;
@@ -159,8 +174,10 @@ div#qTip {
 }
 
 .mapWP {
-	font-size: 16px;
-	line-height: 120%;
+	font-family: Menomonia;
+	font-size: 20px;
+	line-height: 110%;
+	letter-spacing: -1px;
 	color: #ffcc77;
 	text-shadow:
 		0px 0px 2px black,
@@ -170,11 +187,10 @@ div#qTip {
 
 /* =============================================================================
  *  Right panel
- *  Panes (the clock, menu, content pane) are fixed height and
- *  are manually calculated and absolutely positioned (pinned)
- *  to fit as so: Clock(360px) + Menu(48px) + Content(fit to bottom).
- *  If relatively positioned the map pane would be pushed down
- *  by how tall the panes on the right are.
+ *  Panes (the clock, menu, content pane) are fixed height and are manually
+ *  calculated and absolutely positioned (pinned) to fit as so:
+ *  Clock(360px) + Menu(48px) + Content(fit to bottom). If relatively positioned
+ *  the map pane would be pushed down by how tall the panes on the right are.
  * ========================================================================== */
 #panelRight {
 	width: 361px; // 1px extra compensating for the border-left
@@ -185,7 +201,7 @@ div#qTip {
 	box-shadow: -5px 0px 5px #223;
 }
 
-/* @@Clock
+/* @@Klock
 ----------------------------------------------------------------------------- */
 #paneClock {
 	position: absolute;
@@ -545,7 +561,7 @@ div#qTip {
 	cursor: pointer;
 }
 
-/* @@Timer chains
+/* @@Chains layer
 ----------------------------------------------------------------------------- */
 #layerChains header {
 	display: block;
@@ -562,6 +578,27 @@ div#qTip {
 	width: 32px; height: 32px;
 	margin-top: 2px;
 	float: left;
+}
+#layerChains header span { /* Hidden header for each chain categories */
+	display: inline-block;
+	padding: 8px 0px 6px 16px;
+	font-family: Menomonia;
+	font-size: 22px;
+	color: #888888;
+	text-shadow:
+		1px 1px 0px #000,
+		-1px -1px 0px #000,
+		1px -1px 0px #000,
+		-1px 1px 0px #000,
+		1px 1px 0px #000;
+	visibility: hidden;
+}
+#layerChains header:hover span {
+	visibility: visible;
+}
+
+#layerChains header span:active {
+	color: white;
 }
 #layerChains header ins {
 	margin-top: 8px;
@@ -632,7 +669,7 @@ div#qTip {
 
 .chnTitle h2 {
 	display: table-cell;
-	width: 210px; /* this pushes the time to the right */
+	width: 210px; /* This pushes the time to the right */
 	padding-left: 8px;
 	vertical-align: middle;
 	cursor: pointer;
@@ -793,37 +830,41 @@ label:hover {
 	color: #ddff77;
 }
 
-
-
 /* =============================================================================
- *  @@Palette color mostly derived from GW2 game interface.
+ *  @@Palette color derived from GW2 game interface text.
  *  This is for reference.
  * ========================================================================== */
-colorPalette {
-	color: #cc3322; /* Red time text */
-	color: #ff2200; /* Red chat text warning */
-	color: #ee3333; /* Red chat text team name */
-	color: #ff66ee; /* Pink chat text whisper name */
-	color: #ff99ee; /* Pink chat text whisper */
-	color: #ee6655; /* Salmon chat text map name */
-	color: #ffddcc; /* Salmon chat text map */
-	color: #ee7924; /* Orange event progress bar */
-	color: #ff8844; /* Orange text in event panel */
-	color: #ffbb44; /* Gold guild chat text name */
-	color: #ffeeaa; /* Gold guild chat text */
-	color: #ffcc77; /* Gold waypoint chat text */
-	color: #e4e0b3; /* Yellow menu icons top left corner */
-	color: #ffaa22; /* Yellow orange chain title text in event panel */
-	color: #ffcc77; /* Yellow waypoint text */
-	color: #ffff00; /* Yellow chat text squad name */
-	color: #ffff66; /* Yellow chat text squad */
-	color: #bbcc77; /* Green time text */
-	color: #ddff77; /* Green bright chat text notice */
-	color: #88ff88; /* Green chat text say name */
-	color: #44bbff; /* Blue chat text party name */
-	color: #bbddff; /* Blue chat text party */
-	color: #bbbbbb; /* Gray text in mob description */
+paletteText {
+	color: #cc3322; /* Red time */
+	color: #ff2200; /* Red chat warning */
+	color: #ee3333; /* Red chat team name */
+	color: #ff66ee; /* Pink chat whisper name */
+	color: #ff99ee; /* Pink chat whisper */
+	color: #ee55cc; /* Pink karma */
+	color: #ee6655; /* Salmon chat map name */
+	color: #ffddcc; /* Salmon chat map */
+	color: #ff8844; /* Orange event name in panel */
+	color: #dd8800; /* Orange AP */
+	color: #ffbb44; /* Gold guild chat name */
+	color: #44dd44; /* Green laurel */
+	color: #009900; /* Green stats */
+	color: #ffeebb; /* Cream window and UI title */
+	color: #ffeeaa; /* Cream guild chat and item count */
+	color: #ffcc77; /* Cream notice/waypoint */
+	color: #ffaa22; /* Yellow orange chain title in event panel */
+	color: #ffff00; /* Yellow chat squad name */
+	color: #ffff66; /* Yellow chat squad */
+	color: #bbcc77; /* Green time */
+	color: #ddff77; /* Green bright chat notice */
+	color: #88ff88; /* Green chat say name */
+	color: #44bbff; /* Blue chat party name */
+	color: #bbddff; /* Blue chat party */
+	color: #66aaff; /* Blue gem */
+	color: #bbbbbb; /* Gray in mob description */
 	color: #888888; /* Gray chat time timestamp */
 }
 
-
+paletteBackground {
+	color: #ee7924; /* Orange event progress bar */
+	color: #e4e0b3; /* Cream menu icons top left corner */
+}
