--- a/gw2t.css
+++ b/gw2t.css
@@ -42,10 +42,10 @@ body > windowMain
 	panelLeft[paneMap], panelRight[paneClock, paneMenu, paneContent]
 }
 ----------------------------------------------------------------------------- */
-/*@font-face {
+@font-face {
 	font-family: "Menomonia";
 	src: url("https://d1h9a8s8eodvjz.cloudfront.net/fonts/menomonia/08-02-12/font/menomonia.woff") format("woff");
-}*/
+}
 
 html, body {
 	height: 100%;
