--- a/gw2t.css
+++ b/gw2t.css
@@ -4,7 +4,7 @@
 	Measurements: minimum window size is 360x720, which is only enough for the
 	clock and timers list (all of the right panel).
 	CSS3: uses gradient, text-shadow, box-shadow modules.
-	Version: 2014.05.30 modified - 2014.04.18 created
+	Version: 2014.05.31 modified - 2014.04.18 created
 
 	CREDITS:
 	Game assets and map tiles are copyright 2012 ArenaNet, Inc.
@@ -218,6 +218,12 @@ input#mapCoordinatesRegion {
 }
 .mapLoc_WP {
 	color: #ffcc77;
+}
+.mapLoc img {
+	display: block;
+	margin-top: 4px;
+	border: 1px solid #e4e0b3;
+	border-radius: 8px;
 }
 
 
@@ -592,7 +598,8 @@ input#mapCoordinatesRegion {
 	color: white;
 }
 
-.mapJPList a {
+.mapJPList cite a {
+	font-style: normal;
 	text-decoration: none;
 }
 
