Changed time and clock defaults

--- a/gw2t.css
+++ b/gw2t.css
@@ -58,7 +58,7 @@ html, body {
 	margin-left: 24px;
 	font-family: monospace;
 	font-size: 16px;
-	color: white;
+	color: #aaa;
 	text-shadow:
 		1px 1px 0px #333,
 		-1px -1px 0px #333,
