--- a/gw2t.css
+++ b/gw2t.css
@@ -216,9 +216,6 @@ input#mapCoordinatesRegion {
 		0px 0px 2px black,
 		1px 1px 1px black;
 }
-.mapLoc_WP {
-	color: #ffcc77;
-}
 .mapLoc img {
 	display: block;
 	margin-top: 4px;
@@ -526,22 +523,28 @@ input#mapCoordinatesRegion {
 	color: #e4e0b3;
 }
 
-.cntComposition header {
+header.jsCollapsible {
 	padding-top: 8px;
 	font-size: 20px;
 	text-shadow: 0px 0px 2px #e4e0b3;
-	text-decoration: underline;
 	color: #e4e0b3;
 }
-.cntComposition header:hover, .jsCollapsibleDone:hover {
+header.jsCollapsible:hover, header.jsCollapsible:hover {
 	color: white;
 }
-.cntComposition header img {
+header.jsCollapsible span {
+	text-decoration: underline !important;
+}
+header.jsCollapsible span img {
 	width: 32px; height: 32px;
 	margin-right: 16px;
 	vertical-align: middle;
 }
-
+header.jsCollapsible sup {
+	font-family: monospace;
+	font-size: 12px;
+	vertical-align: super;
+}
 .jsCollapsibleDone {
 	margin-bottom: 16px;
 	font-size: 16px;
