Alarm subscription by expanding boss bar details

--- a/gw2t.css
+++ b/gw2t.css
@@ -894,6 +894,9 @@ header.cntHeader {
 .chnTitleFutureFar {
 	color: #888;
 }
+.chnTitleSubscribed {
+	color: #ddff77 !important;
+}
 
 .chnTimeCurrent {
 	color: #bbcc77;
